tree-sitter-omnetpp-msg/test/corpus/regression/import
==================
import
==================

import inet.clock.common.ClockEvent;
import inet.clock.contract.ClockTime;
import inet.common.TagBase;
import inet.common.packet.chunk.Chunk;
import inet.common.packet.Packet;

---

(msg_file
  (import
    (name))
  (import
    (name))
  (import
    (name))
  (import
    (name))
  (import
    (name)))
