tree-sitter-omnetpp-msg/test/corpus/unit/comment
==================
comment
==================

//
// Copyright (C) 2022 OpenSim Ltd.
//
// SPDX-License-Identifier: LGPL-3.0-or-later
//

// send sequence number variables (see RFC 793, "3.2. Terminology")

---

(msg_file
  (comment
    (content))
  (comment
    (content)))
