tree-sitter-omnetpp-msg/test/corpus/unit/struct
==================
struct
==================

//struct ExtendedTimestamp
//{
//    UInteger48 seconds;
//    UInteger48 fractionalNanoseconds;
//};

//typedef Octet8 ClockIdentity;

struct PortIdentity
{
    @packetData;
    uint64_t clockIdentity;
    uint16_t portNumber;
};

---

(msg_file
  (comment
    (content))
  (comment
    (content))
  (struct
    (name)
    (body
      (property
        (name))
      (field
        (type)
        (name))
      (field
        (type)
        (name)))))
